<resources>

    <string name="app_name">ChatExperiment_PHS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_chat_poll_info">ChatPollInfo</string>
    <string name="rates">Rates:</string>
    <string name="startBattery">Start Battery:</string>
    <string name="endBattery">End Battery:</string>
    <string name="duration">Duration</string>
    <string name="Log">Log</string>
    <string name="start">Start meter</string>
    <string name="end">End meter</string>

</resources>